<resources>
    <string name="app_name">TipCalculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bill_amount_label">Bill Amount</string>
    <string name="bill_amount">34.60</string>
    <string name="tip_percent_label">Percent</string>
    <string name="tip_percent">15%</string>
    <string name="decrease">-</string>
    <string name="increase">+</string>
    <string name="tip_amount_label">Tip</string>
    <string name="tip_amount">$0.00</string>
    <string name="total_amount_label">Total</string>
    <string name="total_amount">$0.00</string>
</resources>
